[project]
name = "AssetScripts"
requires-python = "~=3.13"
dependencies = [
    "click==8.1.8",
    "opencv-python==4.11.0.86",
    "numpy==2.2.4",
    "spatium==1.5.5",
    "moderngl==5.12.0",
    "tqdm==4.67.1",
    "viztracer"
]
version = "0"

[tool.hatch.envs.default]
type = "virtual"
path = ".venv"

[tool.hatch.envs.default.scripts]
test_cubemapper_orientation-opengl = "python src/cubemapper.py --input ../raw/test/test_equirec_opengl.png --output ../tmp/test/test_cubemap_opengl.png --orientation-mode opengl --size 256"
test_cubemapper_orientation-map = "python src/cubemapper.py --input ../raw/test/test_equirec_map.png --output ../tmp/test/test_cubemap_map.png --orientation-mode map --size 256"